--- a/index.html
+++ b/index.html
@@ -33,8 +33,18 @@
       <a class="next"></a>
     </div>
     <div class="second">
-      <img src="img/pic01.jpg" height="1109" width="1349"/></div>
+      <img src="img/pic01.jpg" height="1109" width="1349" alt="image"/></div>
   </section>
+  <section class="main">
+    <div class="first">
+<h2 class="heading">MAGNA SED NULLAM NISL ADIPISCING</h2>
+    </div>
+    <div class="second">
+      <strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.
+      <img class="main-img"  src="img/pic02.jpg" height="434" width="820" alt="image"/></div>
+
+  </section>
+  
 
 </div>
 </body>
